chore: change titles and made the new button at top navbar common

--- a/public/fallback.html
+++ b/public/fallback.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kulan Space - Offline</title>
+    <title>Chairman Office - Offline</title>
     <style>
         * {
             margin: 0;
@@ -168,7 +168,7 @@
     <div class="container">
         <div class="icon">📅</div>
         <h1>You're Offline</h1>
-        <p class="subtitle">Kulan Space</p>
+        <p class="subtitle">Chairman Office</p>
         <p>
             <span class="status-indicator"></span>
             No internet connection detected. Please check your network settings and try again.
